expandindo imagem de fundo
0.0.0.0.1.1

--- a/css/estilos css, para html1.css
+++ b/css/estilos css, para html1.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/9cfd967e-bba3-4e4c-b206-8f3ed0105672/d4lkfnh-549fdf2c-6ef5-4892-b348-eb98b463126b.png/v1/fill/w_800,h_800,q_80,strp/textura_17_by_japeau_d4lkfnh-fullview.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3siaGVpZ2h0IjoiPD04MDAiLCJwYXRoIjoiXC9mXC85Y2ZkOTY3ZS1iYmEzLTRlNGMtYjIwNi04ZjNlZDAxMDU2NzJcL2Q0bGtmbmgtNTQ5ZmRmMmMtNmVmNS00ODkyLWIzNDgtZWI5OGI0NjMxMjZiLnBuZyIsIndpZHRoIjoiPD04MDAifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6aW1hZ2Uub3BlcmF0aW9ucyJdfQ.xywAdJhmmnY_u_v_PiF10lmLUs8KJSqehdDWZbVj3Ls");
-    background-size: auto 100vh;
+    background-size: 800px 800px;
     height: 100vh;
     font-family: harrington;
     
