--- a/css/estilos css, para html1.css
+++ b/css/estilos css, para html1.css
@@ -255,3 +255,10 @@ a:hover{
   text-shadow: 1px 2px 10px black;
   transition: text-shadow 500ms;
 }
+
+.borda {
+  font-size: 20px;
+  color: black;
+  font-weight: bold;
+  text-shadow: 1px 1px 4px rgba(255, 255, 255, 0.5);
+}
