--- a/css/estilos css, para html1.css
+++ b/css/estilos css, para html1.css
@@ -15,6 +15,7 @@ body {
     height: 100vh;
     font-family: harrington;
     font-size: 10px;
+    background-repeat: no-repeat;
 }
 
 /* se a tela tiver pelo menos 400 px carrega */
@@ -218,6 +219,7 @@ a:hover{
   top: 0;
   left: 0;
   width: 240px;
+  text-shadow: 1px 1px 4px rgba(255, 255, 255, 0.5);
 }
 
 .card-back {
